--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -316,7 +316,7 @@ Eurostat provides publicly available European aggregated data (downloadable in m
 SBE researchers have a strong interest, e.g., in the availability of childcare services across European Union Member States.
 
 \textbf{Metadata on Aggregated Data in RDF.}
-The variable \emph{formal childcare}\footnote{\url{http://appsso.eurostat.ec.europa.eu/nui/show.do?dataset=ilc_caindformal&lang=en}} (in contrast to childcare at home)
+The variable \emph{formal childcare}\footnote{\url{http://ec.europa.eu/eurostat/web/products-datasets/-/ilc_caindformal}} (in contrast to childcare at home)
 captures the measured availability of childcare services in percent over the population.
 The present data collection refers to data on formal childcare and other types of care by the variables \emph{year}, \emph{duration} (0 hours, 1 - 29 HPW; 30 HPW), \emph{age} of the child (0-2 years; 3 to admission age for compulsory school; admission age for compulsory school to 12) and \emph{country}.
 
